<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomepageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/dimen_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/locationNameTextView"
        style="@android:style/TextAppearance.Material.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Location name" />

    <TextView
        android:id="@+id/weatherTypeTextView"
        style="@android:style/TextAppearance.Material.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:letterSpacing="0.2"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationNameTextView"
        tools:text="Sunny" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:contentDescription="@string/weather_icon"
        tools:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherTypeTextView" />

    <TextView
        android:id="@+id/actualTemperatureTextView"
        style="@android:style/TextAppearance.Material.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView"
        tools:text="22" />

    <com.example.weatherapplication.ui.WeatherMetaDataView
        android:id="@+id/minTemperatureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:label="@string/min"
        app:layout_constraintEnd_toStartOf="@+id/divider1"
        app:layout_constraintTop_toBottomOf="@id/actualTemperatureTextView" />

    <View
        android:id="@+id/divider1"
        android:layout_width="@dimen/dimen_1dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/minTemperatureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/minTemperatureView" />

    <com.example.weatherapplication.ui.WeatherMetaDataView
        android:id="@+id/maxTemperatureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:label="@string/max"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintTop_toBottomOf="@id/actualTemperatureTextView" />

    <com.example.weatherapplication.ui.WeatherMetaDataView
        android:id="@+id/windView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:label="@string/wind_speed"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@id/minTemperatureView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/dimen_1dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/humidityView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/humidityView" />

    <com.example.weatherapplication.ui.WeatherMetaDataView
        android:id="@+id/humidityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:label="@string/humidity"
        app:layout_constraintStart_toEndOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/minTemperatureView" />

    <FrameLayout
        android:id="@+id/loaderFrameLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ProgressBar
            android:id="@+id/progressBar"
            android:foregroundTint="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:text="@string/fetching_weather" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>